Update Java version to 21 and adjust related configurations